syntax = "proto3";

package sportim;

message User {
  string uid = 1;
  string name = 2;
  string avatar = 3;
  string type = 4; // 會員類型 GENERAL:一般會員, MENTOR:導師, INTERNAL:內部人員
}

message LastMessage {
  string content = 1;
  string date = 2;
  User user = 3;
}

message Room {
  string roomId = 1;
  // TODO: 拿掉 repeated
  repeated Message lastMessages = 2;
  string date = 3;
  User user = 4;
  int32 onlineUserCount = 5; // 在線人數
  bool messageIsRead = 6; // 訊息是否已讀
  string lastReadId = 7; // 最後已讀訊息 Id
}

message Message {
  string messageId = 1;
  string content = 2;
  string images = 3;
  string emoticon = 4;
  string date = 5;
  string status = 6;
  User user = 7;
}

message PotentialMember { User user = 1; }

message OnlineUserUpdate {
  string roomId = 1;          // 房間ID
  int32 totalOnlineUsers = 2; // 房間總在線人數
  int32 potentialMembers = 3; // 潛在客戶數量
  int32 regularMembers = 4;   // 一般客戶數量
  int32 mentorMembers = 5;    // 帶單導師數量
}

message BroadcastMessage {
  string uid = 1;
  string broadcast_id = 2;
  string content = 3;
}

message MessageRequest {
  string token = 1; // Add token here
  string action = 2;
  string roomId = 3;
  string correlationId = 4;
  User receiver = 5;     // only for join_room action
  string content = 6;    // only for send_message action
  string images = 7;     // only for send_message action
  string emoticon = 8;   // only for send_message action
  bytes file = 9;        // only for upload_picture action
  string messageId = 10; // only for get_message action
  string type = 11;      // 1.get_room_list群私聊(group|private)
  repeated string roomIds = 12; // for delete_private_room
}

message MessageResponse {
  string action = 1;
  string status = 2;
  string correlationId = 3;
  string roomId = 4;
  repeated Room rooms = 5;                // only for get_room_list action
  repeated Message list = 6;              // only for get_message action
  Message message = 7;                    // only for new_message action
  string url = 8;                         // only for upload_picture action
  int32 page = 9;                         // only for get_message action
  PotentialMember potentialMember = 10;   // only for potential member
  OnlineUserUpdate onlineUpdate = 11;     // for online user update notification
  BroadcastMessage broadcastMessage = 12; // only for send_broadcast action
}

// 提示類型
enum NotifyType {
  newMessage = 0;    // 新訊息
  unreadMessage = 1; // 未讀訊息
}

// 新訊息提示
message NewMessageNotify {
  string sender = 1; // 新訊息-發送者
  string roomId = 2; // 新訊息-房間
}

// 未讀訊息提示
message UnreadMessageNotify {
  int64 totalCount = 1; // 未讀訊息-未讀訊息數量(站內信+私聊房間數)
  int64 chatCount = 2; // 未讀訊息-私聊房間數量
  int64 mailCount = 3; // 未讀訊息-站內信數量
}

// 提示訊息
message NotifyMessage {
  string uid = 1;                              // 會員 Id
  NotifyType notifyType = 2;                   // 提示類型
  NewMessageNotify newMessageNotify = 3;       // 新訊息提示
  UnreadMessageNotify unreadMessageNotify = 4; // 未讀訊息提示
}
